@@ -1,3 +1,15 @@
+2004/02/12 19:21 (+0100) kaffeetisch
+
+	* t/GnomeIconTheme.t: Only test if get_search_path returned
+	something defined.
+
+	* t/GnomeProgram.t: Use properties that are not construct-only to
+	work around the problem for now.
+
+	* t/GnomePopupMenu.t
+	* xs/GnomePopupMenu.xs: Change the binding for
+	gnome_popup_menu_attach to Gtk2::Menu::attach_to.
+
 2004/02/11 02:02 (+0100) kaffeetisch
 
 	* Makefile.PL
